Bug 433107 - Pinstripe drop down arrow for To/CC/BCC too close to the edge, widget doesn't show focus, r=Standard8, ui-r=clarkbw

--- a/mail/themes/pinstripe/mail/compose/messengercompose.css
+++ b/mail/themes/pinstripe/mail/compose/messengercompose.css
@@ -450,15 +450,21 @@ treechildren::-moz-tree-image(remote-err) {
 
 .aw-menulist {
   -moz-appearance: none;
-        border: none;
-list-style-image: url("chrome://global/skin/arrow/arrow-dn.png");
-       background-color: #FFFFFF;
-          border-right: 1px solid #DCDCDC;
+  border: none;
+  list-style-image: url("chrome://global/skin/arrow/arrow-dn.png");
+  background-color: #FFFFFF;
+  border-right: 1px solid #DCDCDC;
+  -moz-padding-start: 5px;
 }
 
 .aw-menulist > .menulist-label {
   font: icon;
   margin-right: 3px;
+}
+
+.aw-menulist:focus {
+  outline: 2px solid -moz-mac-focusring;
+  -moz-outline-offset: -2px;
 }
 
 /* ::::: format toolbar ::::: */
